@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.9
+VERSION=1.9.10
 
 DEPENDENCY="zeda=1.5.16;zm=1.3.5"
 
